<resources>
    <string name="app_name">Avaclick</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_inicio_cuenta">InicioCuentaActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <string name="dialog_nointernet">No internet connection!</string>
    <string name="dialog_uploading">Progress Sample&#8230;</string>
    <string name="dialog_processinganduploading">Showing a sample progress. Please be patient! (This does nothing. Just waiting 100ms / application)</string>

    <string name="tag_nav_drawer_special_entry">nav_drawer_special_entry</string>
    <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>

    <!-- Configuracion activity -->
    <string name="configuracion_titulo">Configuraci\u00f3n</string>

    <!-- Ventana de login -->
    <string name="login_titulo">Administraci\u00f3n</string>
    <string name="login_usuario">Usuario</string>
    <string name="login_contrasena">Contrase\u00f1a</string>
    <string name="login_boton">Iniciar</string>
    <string name="login_error">Usuario y/o contrase\u00f1a incorrecta</string>
    <string name="login_crear_cuenta"><u>Crear una cuenta</u></string>
    <string name="login_confirmacion">Confirmar Contrase\u00f1a</string>


    <!-- Navigation Drawer -->
    <string name="nav_drawer_item_home">Home</string>
    <string name="nav_drawer_item_explore">Explore</string>
    <string name="nav_drawer_help_and_feedback"><![CDATA[Help & feedback]]></string>
    <string name="nav_drawer_about">About</string>
    <string name="navigation_drawer_opened">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed">The navigation drawer is closed</string>
    <string name="tools_text_account_information_username">Sotti</string>
    <string name="tools_text_account_information_email">sotti@sottocorp.com</string>

    <!-- Typeface names -->
    <string name="typeface_roboto_regular">Roboto-Regular</string>
    <string name="typeface_roboto_medium">Roboto-Medium</string>
    <string name="title_activity_maps">Map</string>

    <string name="setting_img_directory">/sdcard/ipati/</string>
    <string name="title_activity_perfil_usuario">Datos de la cuenta</string>

    <string name="facebook_app_id">267343567291563</string>
    <string name="usuario">Usuario</string>
    <string name="usu_correo">Usuario o correo electronico</string>
    <string name="contra">Contraseña</string>
    <string name="password">Password</string>
    <string name="inicio_sesion">Iniciar sesión</string>
    <string name="no_account">¿No tienes una cuenta?</string>
    <string name="registrate">REGISTRATE</string>
    <string name="forget_pass">¿Olvidaste tu contraseña?</string>
    <string name="splashFondo">Fondo</string>
    <string name="imp">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="abrir">Abrir</string>
    <string name="text">text</string>
    <string name="cerrar">Cerrar</string>
    <string name="continuar">Continuar</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="nuevo">Nuevo</string>
    <string name="hola">HOLA</string>
    <string name="crear">Crear</string>
    <string name="consultar">Consultar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="terms">Acepto las <b><a href="http://www.cleverfinger.com.au/user-guide/">Condiciones de Uso</a></b></string>
    <string name="recuperar_contra">Recuperar Contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="correo_ejemplo">correo@ejemplo.com</string>
    <string name="recuperar_cuenta">Ingresa tu email, te enviaremos un enlace para recuperar tu cuenta.</string>
    <string name="toolbarT">Registro</string>
    <string name="toolbarP">Perfil</string>
    <string name="toolbarTR">Reportes</string>
    <string name="toolbarB">Atrás</string>
    <string name="toolbarTitle">Mis reportes</string>
    <string name="buttonPrev">Previo</string>
    <string name="buttonNext">Siguiente</string>
    <string name="shareDescription">Compartir reporte</string>
    <string name="viewDescription">Ver reporte</string>
    <string name="viewPassword">Ver password</string>
    <string name="emailR">Correo:</string>
    <string name="phoneR">Telefono:</string>
    <string name="mobileR">Celular:</string>
    <string name="officePhoneR">Tel. Oficina:</string>
    <string name="nombreR">Nombre:</string>
    <string name="apellidosR">Apellidos:</string>
    <string name="passwordR">Password:</string>
    <string name="passwordCR">Confirmar password:</string>
    <string name="new_report">Un nuevo reporte</string>
    <string name="reports_storage">Tus reportes almacenados</string>
    <string name="buttonR">Crear</string>
    <string name="buttonP">Guardar</string>

    <string name="proceso_label_direccion">Buscar dirección: </string>
    <string name="proceso_label_estado">Estado: </string>
    <string name="proceso_label_municipio">Municipio: </string>
    <string name="proceso_label_codigo_postal">Código postal: </string>
    <string name="proceso_label_colonia">Colonia: </string>0.
    <string name="proceso_label_calle">Calle: </string>
    <string name="proceso_label_numero_ext">Núm Ext: </string>
    <string name="proceso_label_numero_int">Núm Int: </string>
    <string name="proceso_label_lote">Lote: </string>
    <string name="proceso_label_manzana">Manzana: </string>
    <string name="proceso_label_tipo_inmueble">Tipo de Inmueble</string>
    <string name="proceso_label_casa_habitacion">Casa Habitación</string>
    <string name="proceso_label_casa_condominio">Casa Condominio</string>
    <string name="proceso_label_dep_condominio">Departamento Condominio</string>
    <string name="proceso_label_terreno_habitacional">Terreno Habitacional</string>
    <string name="proceso_label_opinion">Opinión de Valor</string>
    <string name="proceso_label_comprar">Comprar</string>
    <string name="proceso_label_vender">Vender</string>
    <string name="proceso_label_informar">Informativo</string>
    <string name="proceso_label_caracteristicas">Caracteristicas</string>
    <string name="proceso_label_recamara">Recamara</string>
    <string name="proceso_label_cochera">Cochera</string>
    <string name="proceso_label_banio">Baño</string>
    <string name="proceso_label_medio_banio">Medio Baño</string>
    <string name="proceso_label_piso">Núm. Pisos</string>
    <string name="proceso_label_terreno">Terreno m2</string>
    <string name="proceso_label_construccion">Construcción m2</string>
    <string name="proceso_label_edo_conservacion">Estado de Conservación</string>
    <string name="proceso_label_edad">Edad del Inmueble</string>
    <string name="proceso_label_amenidades">Amenidades</string>
    <string name="proceso_label_aire">Aire Acondicionado </string>
    <string name="proceso_label_jacuzzi">Jacuzzi</string>
    <string name="proceso_label_alberca">Alberca</string>
    <string name="proceso_label_lavanderia">Lavanderia</string>
    <string name="proceso_label_amueblado">Amueblado</string>
    <string name="proceso_label_cocina">Cocina Integral</string>
    <string name="proceso_label_terraza">Terraza</string>
    <string name="proceso_label_gym">GYM</string>
    <string name="proceso_label_elevador">Elevador</string>
    <string name="proceso_label_seguridad">Seguridad</string>
    <string name="proceso_label_jardin">Jardín</string>
    <string name="proceso_label_estudio">Estudio</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="ap_patern">Ap. Patern</string>
    <string name="celular">Teléfono Celular</string>
    <string name="tel_casa">Teléfono Casa</string>
    <string name="tel_oficina">Teléfono Oficina</string>
    <string name="ap_materno">Ap. Materno</string>
    <string name="google_maps_api">AIzaSyAVCjV6J06cPqZeCHX5vNNFNX8bPljAY3k</string>


</resources>
