<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/proceso_label_tipo_inmueble"
       android:textSize="28dp"
       android:textColor="@color/orange">
   </TextView>

    <com.proyect.avaclick.util.GridRadioGroup
        android:id="@+id/tipoInmueble"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">
        <RadioButton
            android:id="@+id/casa_habitacion"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:checked="true"
            android:drawableTop="@drawable/casa_habitacion"
            android:gravity="bottom|center"
            android:text="@string/proceso_label_casa_habitacion"
            style="@style/GridRadioButton"></RadioButton>
        <RadioButton
            android:id="@+id/casa_condominio"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:drawableTop="@drawable/casa_condominio"
            android:gravity="bottom|center"
            android:text="@string/proceso_label_casa_condominio"
            style="@style/GridRadioButton"></RadioButton>

        <RadioButton
            android:id="@+id/departamento_condominio"
            style="@style/GridRadioButton"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:drawableTop="@drawable/departamento_condominio"
            android:gravity="bottom|center"
            android:text="@string/proceso_label_dep_condominio"></RadioButton>
        <RadioButton
            android:id="@+id/terreno"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:drawableTop="@drawable/terreno_habitacional"
            android:gravity="bottom|center"
            android:text="@string/proceso_label_terreno_habitacional"
            style="@style/GridRadioButton"></RadioButton>
    </com.proyect.avaclick.util.GridRadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proceso_label_opinion"
        android:textSize="28dp"
        android:textColor="@color/orange">
    </TextView>
    <com.proyect.avaclick.util.GridRadioGroup
        android:id="@+id/uso_opinion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3">
        <RadioButton
            android:id="@+id/compra"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:drawableTop="@drawable/comprar"
            android:gravity="bottom|center"
            android:text="@string/proceso_label_comprar"
            style="@style/GridRadioButton">
        </RadioButton>
        <RadioButton
            android:id="@+id/venta"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:drawableTop="@drawable/vender"
            android:gravity="bottom|center"
            android:text="@string/proceso_label_vender"
            style="@style/GridRadioButton">
        </RadioButton>
        <RadioButton
            android:id="@+id/informar"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:drawableTop="@drawable/informar"
            android:gravity="bottom|center"
            android:text="@string/proceso_label_informar"
            style="@style/GridRadioButton">
        </RadioButton>
    </com.proyect.avaclick.util.GridRadioGroup>
</LinearLayout>