<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">

<EditText
    android:id="@+id/inputDireccion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:hint="@string/proceso_label_direccion"
    android:importantForAutofill="no"
    android:inputType="textAutoComplete"
    android:paddingStart="10dp"
    android:paddingEnd="10dp" />

<!--Mapaaaaaa-->


    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        tools:context=".activities.fragments.MapsActivity" >
        <!--   <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">

               <EditText
                   android:layout_width="248dp"
                   android:layout_height="wrap_content"
                   android:id="@+id/editText"
                   android:layout_weight="0.5"
                   android:inputType="textPersonName"
                   android:hint="Search Location" />

               <Button
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="0.5"
                   android:onClick="searchLocation"
                   android:text="Search" />

           </LinearLayout> -->
       </fragment>


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <androidx.appcompat.widget.AppCompatImageView
           android:id="@+id/streetView1"
           android:layout_width="90dp"
           android:layout_height="80dp"
           android:layout_gravity="left"
           android:layout_marginStart="10dp"
           android:layout_marginLeft="5dp"
           android:layout_marginEnd="5dp"
           android:layout_marginRight="10dp" />

       <androidx.appcompat.widget.AppCompatImageView
           android:id="@+id/streetView2"
           android:layout_width="85dp"
           android:layout_height="80dp"
           android:layout_gravity="right"
           android:layout_marginStart="10dp"
           android:layout_marginLeft="5dp"
           android:layout_marginEnd="5dp"
           android:layout_marginRight="10dp" />

       <androidx.appcompat.widget.AppCompatImageView
           android:id="@+id/streetView3"
           android:layout_width="85dp"
           android:layout_height="80dp"
           android:layout_gravity="right"
           android:layout_marginStart="10dp"
           android:layout_marginLeft="5dp"
           android:layout_marginEnd="5dp"
           android:layout_marginRight="10dp" />

       <androidx.appcompat.widget.AppCompatImageView
           android:id="@+id/streetView4"
           android:layout_width="85dp"
           android:layout_height="80dp"
           android:layout_gravity="right"
           android:layout_marginStart="10dp"
           android:layout_marginLeft="5dp"
           android:layout_marginEnd="5dp"
           android:layout_marginRight="10dp" />

   </LinearLayout>

   <EditText
       android:id="@+id/inputEstado"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="left"
       android:layout_marginStart="10dp"
       android:layout_marginLeft="10dp"
       android:layout_marginTop="5dp"
       android:layout_marginEnd="10dp"
       android:layout_marginRight="10dp"
       android:hint="@string/proceso_label_estado"
       />

   <EditText
       android:id="@+id/inputMunicipio"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="left"
       android:layout_marginStart="10dp"
       android:layout_marginLeft="10dp"
       android:layout_marginTop="5dp"
       android:layout_marginEnd="10dp"
       android:layout_marginRight="10dp"
       android:hint="@string/proceso_label_municipio"
       />

   <EditText
       android:id="@+id/inputCodigoPostal"
       android:layout_width="150dp"
       android:layout_height="wrap_content"
       android:gravity="left"
       android:layout_marginStart="10dp"
       android:layout_marginLeft="10dp"
       android:layout_marginTop="5dp"
       android:layout_marginEnd="10dp"
       android:layout_marginRight="10dp"
       android:hint="@string/proceso_label_codigo_postal"
       />

   <EditText
       android:id="@+id/inputColonia"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="left"
       android:layout_marginStart="10dp"
       android:layout_marginLeft="10dp"
       android:layout_marginTop="5dp"
       android:layout_marginEnd="10dp"
       android:layout_marginRight="10dp"
       android:hint="@string/proceso_label_colonia"
       />
   <EditText
       android:id="@+id/inputCalle"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="left"
       android:layout_marginStart="10dp"
       android:layout_marginLeft="10dp"
       android:layout_marginTop="5dp"
       android:layout_marginEnd="10dp"
       android:layout_marginRight="10dp"
       android:hint="@string/proceso_label_calle"
       />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <EditText
           android:id="@+id/inputNumExt"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_marginStart="10dp"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="5dp"
           android:layout_marginEnd="10dp"
           android:layout_marginRight="10dp"
           android:gravity="left"
           android:hint="@string/proceso_label_numero_ext" />

       <EditText
           android:id="@+id/inputNumInt"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:layout_marginStart="10dp"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="5dp"
           android:layout_marginEnd="10dp"
           android:layout_marginRight="10dp"
           android:gravity="left"
           android:hint="@string/proceso_label_numero_int" />
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <EditText
           android:id="@+id/inputLote"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:gravity="left"
           android:layout_marginStart="10dp"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="5dp"
           android:layout_marginEnd="10dp"
           android:layout_marginRight="10dp"
           android:hint="@string/proceso_label_lote"
           />
       <EditText
           android:id="@+id/inputManzana"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:gravity="left"
           android:layout_marginStart="10dp"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="5dp"
           android:layout_marginEnd="10dp"
           android:layout_marginRight="10dp"
           android:hint="@string/proceso_label_manzana"
           />
   </LinearLayout>

   </LinearLayout>