<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_background"
    android:fillViewport="true"
    tools:context=".util.SplashScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f49b21"
        android:isScrollContainer="?android:attr/windowFullscreen"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="145dp"
            android:layout_height="148dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@mipmap/logo2"
            android:contentDescription="@string/title_home" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/usuario"
                android:textColor="@color/text_black_text_87"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/blue_edit_text_default"
                android:hint="@string/usu_correo"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#ff8800"
                android:textColorHint="#ff8800" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/contra"
                android:textColor="@color/text_black_text_87"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <EditText
                    android:id="@+id/txtPasswd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/blue_edit_text_default"
                    android:hint="@string/password"
                    android:imeActionLabel="action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:textColor="#ff8800"
                    android:textColorHint="#ff8800" />

                <Button
                    android:id="@+id/show_pass"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/eye" />

            </RelativeLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:background="#1d1d1b"
                android:text="@string/inicio_sesion"
                android:textAlignment="center"
                android:textColor="@color/text_white_text_icons_100"
                android:textColorLink="#ff9e19"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lblOlvido"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/forget_pass"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_black_text_87"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


        <!--<TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/no_account"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_black_text_87"
            android:textSize="16sp"
            android:textStyle="bold" />-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/no_account"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_black_text_87"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:background="#1d1d1b"
                android:text="@string/registrate"
                android:textAlignment="center"
                android:textColor="@color/text_white_text_icons_100"
                android:textColorLink="#ff9e19"
                android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>