<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:background="@mipmap/header_panel_usuario"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/hola"
            android:textColor="@color/text_white_text_icons_100"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnCrear"
            android:layout_width="160dp"
            android:layout_height="88dp"
            android:layout_marginTop="20dp"
            android:background="@color/feo"
            android:gravity="center"
            android:text="@string/crear"
            android:textAlignment="center"
            android:textColor="@color/text_white_text_icons_100"
            android:textColorLink="#ff9e19"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="160dp"
            android:layout_height="88dp"
            android:background="@color/feo"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/consultar"
            android:textAlignment="center"
            android:textColor="@color/text_white_text_icons_100"
            android:textColorLink="#ff9e19"
            android:textSize="25sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </FrameLayout>




    </LinearLayout>

</LinearLayout>